2006-08-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-speller.c:
	* libgdict/gdict-database-chooser.c: Add API documentation
	definitions for gtk-doc.

	* src/gdict-applet.c: Change the default columns and rows
	number of the applet.

	(window_show_cb), (gdict_applet_build_window),
	(gdict_applet_lookup_end_cb), (gdict_applet_error_cb),
	(gdict_applet_style_set): Move the resize call to a
	callback to the show signal; this should make the
	window manager happier when it tries to place the
	definition window on the desktop.

	* src/gdict-sidebar.c:
	(sidebar_page_id_quark), (gdict_sidebar_add_page),
	(gdict_sidebar_remove_page): Implement the page removal
	function of GdictSidebar.

2006-07-29  Christophe Merlet  <redfox@redfoxcenter.org>

	* src/gdict-window.c: Fixed typo.

2006-07-28  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.c (gdict_init): Use G_OPTION_REMAINING
	to catch every word used on the command line and look up
	them (#335886).

	(gdict_create_window): Create a window for every request
	for match

	* src/gdict-app.c:
	* src/gdict-window.h:
	* src/gdict-window.c: Add an "action" property for the
	GdictWindow widget: use this property to set the
	initial state and action to perform.

2006-07-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-sidebar.c:
	(gdict_sidebar_menu_item_activate): Emit the "page-changed"
	signal.

	* src/gdict-window.c:
	(database_activated_cb), (speller_word_activated_cb): Show
	a message inside the status bar when the user selects a
	database or a word from the side bar.

	(gdict_window_constructor),
	(sidebar_page_changed_cb): Show a message inside the status
	bar depending on the page selected inside the side bar.

2006-07-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-window.h:
	* src/gdict-window.c: Add a GtkEntryCompletion to
	the look up entry, to store the list of successfully
	found words.  doesn't save the history across sessions